candle-einops-macros/tests/ui/fail/einsum-operand-count.stderr
error: einsum accepts at most two operand expressions
 --> tests/ui/fail/einsum-operand-count.rs:4:46
  |
4 |     let _ = einsum!("row, row -> row", (), (), ());
  |                                              ^
